# 4over6-android

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/top/liplus/v4over6/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/lib4over6/: 4over6.cpp  4over6.h  jni_4over6.cpp  log.h  msg.h
app/src/main/cpp/libsodium/arm64-v8a/lib/: libsodium.la
app/src/main/cpp/libsodium/arm64-v8a/lib/pkgconfig/: libsodium.pc
app/src/main/cpp/libsodium/armeabi-v7a/lib/: libsodium.la
app/src/main/cpp/libsodium/armeabi-v7a/lib/pkgconfig/: libsodium.pc
app/src/main/cpp/libsodium/x86/lib/: libsodium.la
app/src/main/cpp/libsodium/x86_64/lib/: libsodium.la
app/src/main/cpp/v4over6/: jni_v4over6.cpp  log.h  msg.h  v4over6.cpp  v4over6.h
app/src/main/java/top/liplus/v4over6/: MainActivity.java
app/src/main/res/anim/: fade_in.xml  fade_in_exit.xml  fade_out.xml  scale_enter.xml  scale_exit.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml  slide_still.xml  swipe_back_exit.xml  swipe_back_exit_still.xml
app/src/main/res/drawable/: ic_action_back.xml  ic_action_connect.xml  ic_action_new.xml  ripple_click.xml
app/src/main/res/layout/: activity_main.xml  fragment_config_list.xml  fragment_edit_config.xml  fragment_new_config.xml  item_server_config.xml
app/src/main/res/menu/: menu_new_config.xml  menu_top_bar.xml
app/src/main/res/values/: colors.xml  dimen.xml  strings.xml
app/src/test/java/top/liplus/v4over6/: ExampleUnitTest.java
(+26 files in other folders)
